--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -15,7 +15,8 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "isolatedModules": false,
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "lib": ["ES2015", "dom"]
   },
   "exclude": [
     "node_modules"
