--- a/server/graphcool.yml
+++ b/server/graphcool.yml
@@ -1,9 +1,37 @@
 types: ./types.graphql
 functions:
+  ## Authentication
+  signup:
+    type: resolver
+    schema: src/email-password/signup.graphql
+    handler:
+      code: src/email-password/signup.ts
+
+  authenticate:
+    type: resolver
+    schema: src/email-password/authenticate.graphql
+    handler:
+      code: src/email-password/authenticate.ts
+
+  loggedInUser:
+    type: resolver
+    schema: src/email-password/loggedInUser.graphql
+    handler:
+      code: src/email-password/loggedInUser.ts
+
+  ## Business Logic
   hello:
     schema: src/hello.graphql
     type: resolver
     handler:
       code: ./src/hello.ts
 
-rootTokens: []
+permissions:
+- operation: Talk.read
+  authenticated: true
+- operation: Talk.create
+  authenticated: true
+- operation: Talk.update
+  authenticated: true
+- operation: Talk.delete
+  authenticated: true
