--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -15,8 +15,7 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "isolatedModules": false,
-    "moduleResolution": "node",
-    "lib": ["ES2015", "dom"]
+    "moduleResolution": "node"
   },
   "exclude": [
     "node_modules"
