--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "graphql": "^0.11.7",
         "graphql-request": "^1.4.0",
         "graphql-tag": "^2.5.0",
+        "material-ui": "^0.19.4",
         "react": "^16.1.1",
         "react-apollo": "^2.0.1",
         "react-dom": "^16.1.1",
