--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "@types/node": "^8.0.44",
         "@types/react": "^16.0.25",
         "@types/react-intl": "^2.3.2",
+        "@types/react-router": "^4.0.19",
         "@types/validator": "^6.3.0",
         "apollo-codegen": "0.16.x",
         "babel-jest": "^21.2.0",
