--- a/package.json
+++ b/package.json
@@ -49,9 +49,13 @@
         "babel-jest": "^21.2.0",
         "babel-node-modules": "^0.0.1",
         "babel-preset-es2015": "^6.24.1",
+        "css-loader": "^0.28.7",
         "enzyme": "^3.2.0",
         "enzyme-adapter-react-16": "^1.1.0",
+        "extract-text-webpack-plugin": "^3.0.2",
         "jest": "^21.2.1",
+        "less": "^2.7.3",
+        "less-loader": "^4.0.5",
         "prettier": "^1.8.2",
         "ts-jest": "^21.2.3",
         "ts-loader": "^3.1.1",
