--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "graphql-request": "^1.4.0",
         "graphql-tag": "^2.5.0",
         "material-ui": "^0.19.4",
+        "prop-types": "^15.6.0",
         "react": "^16.1.1",
         "react-apollo": "^2.0.1",
         "react-dom": "^16.1.1",
@@ -42,6 +43,7 @@
         "@types/enzyme": "^3.1.5",
         "@types/jest": "^21.1.8",
         "@types/node": "^8.0.44",
+        "@types/prop-types": "^15.5.2",
         "@types/react": "^16.0.25",
         "@types/react-intl": "^2.3.2",
         "@types/react-router": "^4.0.19",
