--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
         "tslint-config-prettier": "^1.6.0",
         "tslint-react": "^3.2.0",
         "typescript": "^2.6.1",
+        "uglifyjs-webpack-plugin": "^1.2.0",
         "webpack": "^3.8.1",
         "webpack-dev-server": "^2.9.4"
     },
