--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "setup:typings": "apollo-codegen generate './client/src/**/*.{ts,tsx}' --schema schema.json --target typescript --output ./client/mopad-graphql.ts",
         "postinstall": "npm run setup:schema && npm run setup:typings",
         "build": "webpack --config ./client/webpack.config.js",
+        "dist": "webpack --config ./client/webpack.config.js --mode=production",
         "serve": "webpack-dev-server --config ./client/webpack.config.js",
         "prettier": "prettier --write '**/*.{ts,tsx}'",
         "prettier:check": "prettier -l '**/*.{ts,tsx}'",
@@ -52,22 +53,24 @@
         "babel-jest": "^21.2.0",
         "babel-node-modules": "^0.0.1",
         "babel-preset-es2015": "^6.24.1",
-        "css-loader": "^0.28.7",
+        "css-loader": "^1.0.1",
         "enzyme": "^3.2.0",
         "enzyme-adapter-react-16": "^1.1.0",
-        "extract-text-webpack-plugin": "^3.0.2",
+        "extract-text-webpack-plugin": "^4.0.0-beta.0",
+        "html-webpack-plugin": "^3.2.0",
         "jest": "^21.2.1",
         "less": "^2.7.3",
-        "less-loader": "^4.0.5",
+        "less-loader": "^4.1.0",
         "prettier": "^1.15.2",
+        "style-loader": "^0.23.1",
         "ts-jest": "^21.2.3",
-        "ts-loader": "^3.1.1",
+        "ts-loader": "^5.3.0",
         "tslint-config-prettier": "^1.6.0",
         "tslint-react": "^3.2.0",
         "typescript": "^2.6.2",
-        "uglifyjs-webpack-plugin": "^1.2.0",
-        "webpack": "^3.8.1",
-        "webpack-dev-server": "^2.9.4"
+        "webpack": "^4.25.1",
+        "webpack-cli": "^3.1.2",
+        "webpack-dev-server": "^3.1.10"
     },
     "prettier": {
         "tabWidth": 4
