--- a/graphcool.yml
+++ b/graphcool.yml
@@ -31,19 +31,26 @@ permissions:
   authenticated: true
 - operation: User.create
   authenticated: true
-- operation: User.update
+- operation: Team.read
+- operation: Team.create
   authenticated: true
-- operation: User.delete
+  query: server/src/permissions/isAdmin.graphql
+- operation: Team.update
   authenticated: true
+  query: server/src/permissions/isAdmin.graphql
+- operation: Team.delete
+  authenticated: true
+  query: server/src/permissions/isAdmin.graphql
 - operation: Topic.read
   authenticated: true
 - operation: Topic.create
   authenticated: true
 - operation: Topic.update
   authenticated: true
+  query: server/src/permissions/isAdminOrAuthor.graphql
 - operation: Topic.delete
   authenticated: true
-  query: server/src/permissions/isAdmin.graphql
+  query: server/src/permissions/isAdminOrAuthor.graphql
 - operation: Location.read
   authenticated: true
 - operation: Location.create
@@ -57,12 +64,16 @@ permissions:
   query: server/src/permissions/isAdmin.graphql
 - operation: ExpertParticipation.connect
   authenticated: true
+  query: server/src/permissions/isUserParticipation.graphql:expert
 - operation: ExpertParticipation.disconnect
   authenticated: true
+  query: server/src/permissions/isUserParticipation.graphql:expert
 - operation: NewbieParticipation.connect
   authenticated: true
+  query: server/src/permissions/isUserParticipation.graphql:newbie
 - operation: NewbieParticipation.disconnect
   authenticated: true
+  query: server/src/permissions/isUserParticipation.graphql:newbie
 - operation: TopicsInLocation.connect
   authenticated: true
   query: server/src/permissions/isAdmin.graphql
