--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "graphql-tag": "^2.5.0",
         "moment": "^2.19.3",
         "prop-types": "^15.6.0",
+        "query-string": "^6.2.0",
         "react": "^16.3",
         "react-apollo": "^2.0.1",
         "react-dom": "^16.3",
@@ -46,6 +47,7 @@
         "@types/jest": "^21.1.8",
         "@types/node": "^8.0.44",
         "@types/prop-types": "^15.5.2",
+        "@types/query-string": "^6.1.1",
         "@types/react": "^16.0",
         "@types/react-intl": "^2.3.2",
         "@types/react-router": "^4.0.19",
