--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "author": "Robert Oehlmann, Finn Poppinga",
     "license": "MIT",
     "dependencies": {
+        "@material-ui/core": "^3.4.0",
+        "@material-ui/icons": "^3.0.1",
         "apollo-cache-inmemory": "^1.1.1",
         "apollo-client": "^2.0.3",
         "apollo-link": "^1.0.3",
@@ -28,12 +30,11 @@
         "graphql": "^0.11.7",
         "graphql-request": "^1.4.0",
         "graphql-tag": "^2.5.0",
-        "material-ui": "^0.19.4",
         "moment": "^2.19.3",
         "prop-types": "^15.6.0",
-        "react": "^16.2.0",
+        "react": "^16.3",
         "react-apollo": "^2.0.1",
-        "react-dom": "^16.1.1",
+        "react-dom": "^16.3",
         "react-intl": "^2.4.0",
         "react-router-dom": "^4.2.2",
         "validator": "^9.0.0"
@@ -67,7 +68,7 @@
         "ts-loader": "^5.3.0",
         "tslint-config-prettier": "^1.6.0",
         "tslint-react": "^3.2.0",
-        "typescript": "^2.6.2",
+        "typescript": "3",
         "webpack": "^4.25.1",
         "webpack-cli": "^3.1.2",
         "webpack-dev-server": "^3.1.10"
