--- a/.github/workflows/deploy-to-firebase.yaml
+++ b/.github/workflows/deploy-to-firebase.yaml
@@ -13,6 +13,8 @@ jobs:
         uses: actions/checkout@master
       - name: Install Dependencies
         run: yarn install --frozen-lockfile
+      - name: Install Dependencies
+        run: yarn add eslint
       - name: Build
         run: yarn build
       - name: Archive Production Artifact
