--- a/functions/package.json
+++ b/functions/package.json
@@ -19,6 +19,7 @@
     "ical-generator": "^1.15.1"
   },
   "devDependencies": {
+    "eslint": "^7.13.0",
     "firebase-functions-test": "^0.2.0"
   },
   "private": true
