--- a/.github/workflows/deploy-to-firebase.yaml
+++ b/.github/workflows/deploy-to-firebase.yaml
@@ -12,7 +12,7 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@master
       - name: Install Dependencies
-        run: yarn install --frozen-lockfile && cd functions && yarn install --frozen-lockfile
+        run: yarn install --frozen-lockfile && cd functions && yarn install --ignore-engines --frozen-lockfile
       - name: Build
         run: yarn build
       - name: Archive Production Artifact
