--- a/functions/package.json
+++ b/functions/package.json
@@ -2,7 +2,6 @@
   "name": "functions",
   "description": "Cloud Functions for Firebase",
   "scripts": {
-    "lint": "echo \"hack: will not lint\"",
     "serve": "firebase emulators:start --only functions",
     "shell": "firebase functions:shell",
     "start": "npm run shell",
@@ -15,8 +14,7 @@
   "main": "index.js",
   "dependencies": {
     "firebase-admin": "^9.3.0",
-    "firebase-functions": "^3.11.0",
-    "ical-generator": "^1.15.1"
+    "firebase-functions": "^3.6.1"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.2.0"
