--- a/.github/workflows/deploy-to-firebase.yaml
+++ b/.github/workflows/deploy-to-firebase.yaml
@@ -12,7 +12,7 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@master
       - name: Install Dependencies
-        run: yarn install --frozen-lockfile && cd functions && yarn install --ignore-engines --frozen-lockfile
+        run: yarn install --frozen-lockfile
       - name: Build
         run: yarn build
       - name: Archive Production Artifact
@@ -32,6 +32,8 @@ jobs:
         with:
           name: build
           path: build
+      - name: Install Dependencies
+        run: cd functions && npm ci
       - name: Deploy to Firebase
         uses: w9jds/firebase-action@master
         with:
