--- a/functions/package.json
+++ b/functions/package.json
@@ -15,7 +15,8 @@
   "main": "index.js",
   "dependencies": {
     "firebase-admin": "^9.3.0",
-    "firebase-functions": "^3.6.1"
+    "firebase-functions": "^3.6.1",
+    "ical-generator": "^1.15.1"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.2.0"
