--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "short_name": "Mopad",
+  "short_name": "MOPAD",
   "name": "Moderated Organization PAD (powerful, agile, distributed)",
   "icons": [
     {
