--- a/.github/workflows/deploy-to-firebase.yaml
+++ b/.github/workflows/deploy-to-firebase.yaml
@@ -11,6 +11,8 @@ jobs:
     steps:
       - name: Checkout Repo
         uses: actions/checkout@master
+        with:
+          lfs: true
       - name: Install Dependencies
         run: yarn install --frozen-lockfile
       - name: Build
