Add team [skip ci]

--- a/firebase-documents-init.json
+++ b/firebase-documents-init.json
@@ -63,6 +63,9 @@
     "52696e6f626f74": {
       "name": "Rinobot"
     },
+    "526f626f6475636b73": {
+      "name": "Roboducks"
+    },
     "526f626f456972616e6e": {
       "name": "RoboEirann"
     },
