--- a/firebase-documents-init.json
+++ b/firebase-documents-init.json
@@ -39,11 +39,17 @@
     "426c756557617665": {
       "name": "BlueWave"
     },
+    "434954427261696e73": {
+      "name": "CITBrains",
+    },
     "44696e6f4279746573": {
       "name": "DinoBytes"
     },
     "44757463684e616f5465616d": {
       "name": "DutchNaoTeam"
+    },
+    "45726f73": {
+      "name": "Eros",
     },
     "48532d4b4c": {
       "name": "HS-KL"
@@ -78,6 +84,7 @@
     "556e4265617461626c6573": {
       "name": "UnBeatables"
     },
+    "7245736f": {
     "72554e5357696674": {
       "name": "rUNSWift"
     }
