Update documents init

--- a/firebase-documents-init.json
+++ b/firebase-documents-init.json
@@ -40,7 +40,7 @@
       "name": "BlueWave"
     },
     "434954427261696e73": {
-      "name": "CITBrains",
+      "name": "CITBrains"
     },
     "44696e6f4279746573": {
       "name": "DinoBytes"
@@ -49,7 +49,7 @@
       "name": "DutchNaoTeam"
     },
     "45726f73": {
-      "name": "Eros",
+      "name": "Eros"
     },
     "48532d4b4c": {
       "name": "HS-KL"
