Fix spelling of RoboEir(e)ann

--- a/firebase-documents-init.json
+++ b/firebase-documents-init.json
@@ -73,7 +73,7 @@
       "name": "Roboducks"
     },
     "526f626f456972616e6e": {
-      "name": "RoboEirann"
+      "name": "RoboEireann"
     },
     "53505152": {
       "name": "SPQR"
