--- a/firebase-documents-init.json
+++ b/firebase-documents-init.json
@@ -36,6 +36,9 @@
     "426974426f7473": {
       "name": "BitBots"
     },
+    "456c656374726963205368656570": {
+      "name": "Electric Sheep"
+    },
     "426c756557617665": {
       "name": "BlueWave"
     },
