--- a/firebase-documents-init.json
+++ b/firebase-documents-init.json
@@ -42,6 +42,9 @@
     "426c756557617665": {
       "name": "BlueWave"
     },
+    "426f6c6420486561727473": {
+      "name": "Bold Hearts"
+    },
     "434954427261696e73": {
       "name": "CITBrains"
     },
