--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ rand_core = {version = "0.6.4", features = ["std"]}
 serde = {version = "1.0.144", features = ["derive"]}
 serde_json = "1.0.85"
 tokio = {version = "1.21.1", features = ["full"]}
+tower-http = {version = "0.3.4", features = ["fs"]}
