--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ version = "0.1.0"
 
 [dependencies]
 argon2 = "0.4.1"
-axum = {version = "0.5.16", features = ["ws"]}
+axum = { version = "0.5.16", features = ["json", "ws"] }
 eyre = "0.6.8"
 rand_core = {version = "0.6.4", features = ["std"]}
 serde = {version = "1.0.144", features = ["derive"]}
