--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,11 @@ version = "0.1.0"
 
 [dependencies]
 argon2 = "0.4.1"
-axum = { version = "0.5.16", features = ["json", "ws"] }
+axum = {version = "0.5.16", features = ["json", "query", "ws"]}
 eyre = "0.6.8"
 rand_core = {version = "0.6.4", features = ["std"]}
 serde = {version = "1.0.144", features = ["derive"]}
 serde_json = "1.0.85"
-time = { version = "0.3.14", features = ["formatting"] }
+time = {version = "0.3.14", features = ["formatting"]}
 tokio = {version = "1.21.1", features = ["full"]}
 tower-http = {version = "0.3.4", features = ["fs"]}
