--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,13 @@ version = "0.1.0"
 
 [dependencies]
 argon2 = "0.5.2"
+async-trait = "0.1.74"
 axum = {version = "0.6.20", features = ["json", "query", "ws"]}
 eyre = "0.6.8"
 rand_core = {version = "0.6.4", features = ["std"]}
 serde = {version = "1.0.189", features = ["derive"]}
 serde_json = "1.0.85"
+sqlx = {version = "0.7.3", features = ["runtime-tokio", "sqlite"]}
 time = {version = "0.3.14", features = ["formatting"]}
 tokio = {version = "1.26.0", features = ["full"]}
 tower-http = {version = "0.4.4", features = ["fs"]}
