--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ argon2 = "0.5.2"
 async-trait = "0.1.74"
 axum = {version = "0.6.20", features = ["json", "query", "ws"]}
 eyre = "0.6.8"
+futures-util = "0.3.29"
 rand_core = {version = "0.6.4", features = ["std"]}
 serde = {version = "1.0.189", features = ["derive"]}
 serde_json = "1.0.85"
