--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ version = "0.1.0"
 argon2 = "0.5.2"
 async-trait = "0.1.74"
 axum = {version = "0.7.1", features = ["json", "query", "ws"]}
+clap = { version = "4.4.10", features = ["derive"] }
 eyre = "0.6.8"
 futures-util = "0.3.29"
 rand_core = {version = "0.6.4", features = ["std"]}
