--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,4 @@ time = {version = "0.3.14", features = ["formatting"]}
 tokio = {version = "1.26.0", features = ["full"]}
 tower-http = {version = "0.5.0", features = ["fs"]}
 tower-service = "0.3.2"
+tungstenite = "0.20.1"
