--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ version = "0.2.0"
 [dependencies]
 argon2 = "0.5.3"
 axum = {version = "0.6.20", features = ["json", "query", "ws"]}
+clap = { version = "4.5.20", features = ["derive"] }
 eyre = "0.6.12"
 rand_core = {version = "0.6.4", features = ["std"]}
 serde = {version = "1.0.215", features = ["derive"]}
@@ -14,3 +15,5 @@ serde_json = "1.0.132"
 time = {version = "0.3.36", features = ["formatting"]}
 tokio = {version = "1.41.1", features = ["full"]}
 tower-http = {version = "0.4.4", features = ["fs"]}
+tracing = "0.1.40"
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
