skip build action

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,43 +5,43 @@ on:
       - main
 
 jobs:
-  publish:
-    name: Build and Publish
-    runs-on: ubuntu-latest
-    env:
-      IMAGE_NAME: mopad
-      IMAGE_TAGS: latest ${{ github.sha }} ${{ github.ref_name }}
-      IMAGE_REGISTRY: docker://ghcr.io/hulks/
-      REGISTRY_USER: ${{ github.actor }}
-      REGISTRY_PASSWORD: ${{ github.token }}
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          lfs: true
-
-      - name: build image
-        id: build-image
-        uses: redhat-actions/buildah-build@v2
-        with:
-          image: ${{ env.IMAGE_NAME }}
-          tags: ${{ env.IMAGE_TAGS }}
-          containerfiles: |
-            ./Containerfile
-
-      - name: push to ghcr.io
-        id: push-to-registry
-        uses: redhat-actions/push-to-registry@v2
-        with:
-          image: ${{ steps.build-image.outputs.image }}
-          tags: ${{ steps.build-image.outputs.tags }}
-          registry: ${{ env.IMAGE_REGISTRY }}
-          username: ${{ env.REGISTRY_USER }}
-          password: ${{ env.REGISTRY_PASSWORD }}
-
-      - name: echo outputs
-        run: |
-          echo "${{ toJSON(steps.push-to-registry.outputs) }}"
-
+  # publish:
+  #   name: Build and Publish
+  #   runs-on: ubuntu-latest
+  #   env:
+  #     IMAGE_NAME: mopad
+  #     IMAGE_TAGS: latest ${{ github.sha }} ${{ github.ref_name }}
+  #     IMAGE_REGISTRY: docker://ghcr.io/hulks/
+  #     REGISTRY_USER: ${{ github.actor }}
+  #     REGISTRY_PASSWORD: ${{ github.token }}
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #       with:
+  #         lfs: true
+  #
+  #     - name: build image
+  #       id: build-image
+  #       uses: redhat-actions/buildah-build@v2
+  #       with:
+  #         image: ${{ env.IMAGE_NAME }}
+  #         tags: ${{ env.IMAGE_TAGS }}
+  #         containerfiles: |
+  #           ./Containerfile
+  #
+  #     - name: push to ghcr.io
+  #       id: push-to-registry
+  #       uses: redhat-actions/push-to-registry@v2
+  #       with:
+  #         image: ${{ steps.build-image.outputs.image }}
+  #         tags: ${{ steps.build-image.outputs.tags }}
+  #         registry: ${{ env.IMAGE_REGISTRY }}
+  #         username: ${{ env.REGISTRY_USER }}
+  #         password: ${{ env.REGISTRY_PASSWORD }}
+  #
+  #     - name: echo outputs
+  #       run: |
+  #         echo "${{ toJSON(steps.push-to-registry.outputs) }}"
+  #
   deploy:
     needs: publish
     name: Deploy
