--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,13 +4,16 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "check": "eslint .",
     "dev": "vite",
     "build": "tsc -b && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "@preact/signals": "^2.5.1",
-    "preact": "^10.27.2"
+    "eslint": "^9.39.1",
+    "preact": "^10.27.2",
+    "typescript-eslint": "^8.47.0"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.10.2",
